vertical align fixed

--- a/modal.css
+++ b/modal.css
@@ -27,6 +27,10 @@ html {
     padding: 20px;
     border: 1px solid #888;
     width: 50%;
+    height: 50%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .close {
